Fix background and spacing on mobile

--- a/src/Components/FormPage/FormPage.css
+++ b/src/Components/FormPage/FormPage.css
@@ -1,11 +1,11 @@
 .form-page {
-  background: #ffffff url("../../images/background.png") center cover no-repeat;
-  /* background-repeat: none; */
+  background-image: url("../../images/background.png");
+  background-repeat: none;
+  background-size: cover;
   height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .form-backdrop {
@@ -13,6 +13,7 @@
   width: 80%;
   background-color: white;
   border-radius: 30px;
+  margin-top: 150px;
 }
 
 .form-container {
@@ -193,7 +194,7 @@
 @media screen and (max-width: 850px) {
   .form-backdrop {
     width: 100%;
-    height: 80%;
+    height: 87%;
     position: fixed;
     bottom: 0;
     border-radius: 30px 30px 0 0;
